--- a/_config.yml
+++ b/_config.yml
@@ -1,28 +1,28 @@
 logo: # add logo name
-title: Bef - Enjoy Freedom
+title: 糖糖的个人网站
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 permalink: ':title/'
-baseurl: "/bef" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Banner settings
 video: mountains.mp4 # add banner video. Add your video file to the folder video
-banner-title: # add banner title
-banner-desc: # add banner description
+banner-title: 嘿嘿嘿 # add banner title
+banner-desc: 你想要吗？？？？？？？？？？？？？？？？？？ # add banner description
 
 # Author settings
 author-pic: face.jpg # your photo
-author-name: # your name
-about-author: # about author
-email: your-email@domain.com # your email
-phone: (496)-169-6557 # your pnone number
-website: https://dwayne.example.com # you website
+author-name: 唐建祯 # your name
+about-author: 工大小库里，yyds！！ # about author
+email: 952158354@qq.com # your email
+phone: 13145659923 # your pnone number
+website: https://tjz.github.io/ # you website
 
 # Social link
-google_url:   www.baidu.com # add url link
+google_url:    https://tjz.github.io/ # add url link
 twitter_url:   # add url link
 instagram_url: # add url link
 pinterest_url: # add url link
