--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: > # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 permalink: ':title/'
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://tjz.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://hereTJZ.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 domain: "tjz.github.io"
 
 # Banner settings
@@ -20,10 +20,10 @@ author-name: 唐建祯 # your name
 about-author: 工大小库里，yyds！！ # about author
 email: 952158354@qq.com # your email
 phone: 13145659923 # your pnone number
-website: https://tjz.github.io/ # you website
+website: https://hereTJZ.github.io/ # you website
 
 # Social link
-google_url:    https://tjz.github.io/ # add url link
+google_url:    https://hereTJZ.github.io/ # add url link
 twitter_url:   # add url link
 instagram_url: # add url link
 pinterest_url: # add url link
